tests/paczka1/fuzzy1/33441805.err
Error in line 5: v0lUjv3j S236 62,5
Error in line 17: R9B A757 48,2
Error in line 19: R9B S236 49,2
Error in line 23: v0lUjv3j S236 43,0
Error in line 24: v0lUjv3j S203 89,4
Error in line 9: 6W3hgyZZBM A757 33,2
Error in line 21: rjasmh2xM S236 75,8
Error in line 31: rjasmh2xM S203 10,1
